--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Agency - Ladning Page</title>
+    <title>Digital Agency - Landing Page</title>
+    <meta name="description" content="Landing page de una agencia digital">
+    <meta name="keywords" content="agencia, digital, marketing">
+    <meta name="author" content="Antonio Montiel">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="./src/img/5132551.jpg">
     <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/7e4ef76da4.js" crossorigin="anonymous"></script>
 </head>
@@ -17,8 +22,8 @@
                 <li><a href="#">testimonials</a></li>
                 <li><a href="#">contact</a></li>
             </ul>
-            <i class="fa-solid fa-bars" id="hamburger"></i>
         </nav>
+        <i class="fa-solid fa-bars" id="hamburger"></i>
     </header>
     <main>
         <section class="hero">
@@ -31,22 +36,26 @@
         </section>
         <section class="partners">
             <ul>
-                <li><i class="fa-brands fa-spotify"></i></li>
-                <li><i class="fa-brands fa-slack"></i></li>
-                <li><i class="fa-brands fa-dropbox"></i></li>
+                <li>Spotify<i class="fa-brands fa-spotify"></i></li>
+                <li>Slack<i class="fa-brands fa-slack"></i></li>
+                <li>Dropbox<i class="fa-brands fa-dropbox"></i></li>
                 <li>zoom</li>
             </ul>
         </section>
         <section class="info-right">
             <img src="./src/img/5132551.jpg" alt="mujer-superwoman" title="Mujer con una capa de superman">
-            <h3>Branding & Design System</h3>
-            <p>Commonly Used in the graphic, print & publishing industries for previewing visual layour and mockups</p>
-            <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+            <div class="info-right-desc">
+                <h3>Branding & Design System</h3>
+                <p>Commonly Used in the graphic, print & publishing industries for previewing visual layour and mockups</p>
+                <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+            </div>
         </section>
         <section class="info-left">
-            <h3>Custome & Plugin Development</h3>
-            <p>Commonly Used in the graphic, print & publishing industries for previewing visual layour and mockups</p>
-            <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+            <div class="info-left-desc">
+                <h3>Custome & Plugin Development</h3>
+                <p>Commonly Used in the graphic, print & publishing industries for previewing visual layour and mockups</p>
+                <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+            </div>
             <img src="./src/img/5190433.jpg" alt="mujer-tablet" title="Mujer trabajando con una tablet">
         </section>
     </main>
@@ -55,29 +64,29 @@
             <h3>Digital Agency</h3>
             <p>Builiding Digital Products, Brands & Experience</p>
         </div>
-        <div>
+        <nav class="footer-nav">
             <ul>
-                <li>Resources</li>
+                <li class="nav-link-title">Resources</li>
                 <li><a href="#">Guides</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Customer Service</a></li>
                 <li><a href="#">Glossely</a></li>
             </ul>
             <ul>
-                <li>Company</li>
+                <li class="nav-link-title">Company</li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">Partners</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
             <ul>
-                <li>Social Media</li>
+                <li class="nav-link-title">Social Media</li>
                 <li><a href="#">LinkedIn</a></li>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Instagram</a></li>
                 <li><a href="#">X</a></li>
             </ul>
-        </div>
+        </nav>
     </footer>
 </body>
 </html>
